# NeuralNetworkFromScratch

./: LICENSE  README.md  conda_env_setup.bat  data.py  helper.py  main.py  neuralNetworkFromScratch.ipynb  nn.py  nn_generic.py  pyproject.toml
