[tool.poetry]
name = "neuralnetworkfromscratch"
version = "0.1.0"
description = ""
authors = ["Christian Coenen <smarter.code.yt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
matplotlib = "~=3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
