[tool.poetry]
name = "neuralnetworkfromscratch"
version = "1.0.0"
description = "Minimalistic implementation of a simple feedforward Neural Network"
authors = ["Christian Coenen <smarter.code.yt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
matplotlib = "~=3.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
